Finished jQuery Streetfighter Project

--- a/main.html
+++ b/main.html
@@ -14,8 +14,14 @@
 			<div class="ryu-still"></div>
 			<div class="ryu-ready"></div>
 			<div class="ryu-throwing"></div>
+			<div class="ryu-cool"></div>
 		</div>
 		<div class="hadouken"></div>
+		<div class="instructions">
+			<h1 class="inst-two">Click on Ryu to make him throw a Hadouken!</h1>
+			<h1 class="inst-one">Press 'X' to make Ryu go into his cool pose!</h1>
+		</div>
 	</div>
+	<audio id="hadouken-sound" src="sound/hadouken.mp3"></audio>
 </body>
 </html>
